# -AutoApply-AI

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  e2e_api_test.py  fix_db.py  pyproject.toml  requirements.txt  start.bat  test_trigger_daniyal.py  test_upload.py  verify_pipeline.py
alembic/: env.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: applications.py  auth.py  jobs.py  matches.py  resumes.py  settings.py
app/core/: config.py  database.py  logging.py  security.py
app/frontend/: streamlit_app.py
app/models/: __init__.py  application.py  base.py  job.py  match.py  notification.py  preference.py  resume.py  scraper_run.py  setting.py  user.py
app/schemas/: application.py  auth.py  job.py  match.py  preference.py  resume.py
app/scrapers/: adzuna.py  base.py  career_page.py  greenhouse_api.py  lever_api.py  linkedin.py  workday_api.py
app/services/: auto_apply.py  embedding.py  form_filler.py  job_skill_extractor.py  matcher.py  notification.py  resume_parser.py  scraper_service.py
app/worker/: browser_pool.py  scheduler.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/applications/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: GlassCard.tsx  JobCard.tsx  MatchCard.tsx  PageContainer.tsx  StatCard.tsx  TopBar.tsx  TopNav.tsx  UploadDropzone.tsx
frontend/src/lib/: api.ts  auth.tsx
scripts/: migrate_db.py
tests/: test_api.py  test_imports.py  test_integration.py  test_resume_upload.py  test_units.py
(+7 files in other folders)
